Add a note about winId() to QQuickWidget

This unfortunate function causes the creation of a
native window which is very wrong.

Task-number: QTBUG-40765
Change-Id: Ia08138cf35c240c883c63a66a54f949b86ccc2d2
Reviewed-by: Paul Olav Tvete <paul.tvete@digia.com>